--- a/templates/courseMap.html
+++ b/templates/courseMap.html
@@ -25,7 +25,7 @@
             </nav>
             <h3 class="text-muted">Postmates Racing</h3>
         </div>
-
+<!--
 <div class="col-sm-6">   
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Select Driver</button>
@@ -36,13 +36,13 @@
 <p id="name"></p>
 </div>
 </div>
-
+-->
   <div id="map" class="col-sm-12" style="height: 750px; margin-top: 15px;"></div>
  </div>
  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
   <script src="leaflet.js"></script>
-<script src="courseMap.js"></script>
+<!--<script src="courseMap.js"></script>-->
 </body>
 </html>
 
